--- a/index.html
+++ b/index.html
@@ -2,24 +2,21 @@
 <html>
 <head>
   <title>Canvas</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <canvas id="canvas" width="200" height="200"></canvas>
+  
+    <div class="box">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo explicabo facere neque provident odio itaque placeat eius quidem. Beatae voluptatibus rem ipsum nemo maiores illo nihil soluta? A perspiciatis esse adipisci nemo recusandae, vitae possimus natus ratione quam aliquam quidem est molestias voluptates facere quasi quos fuga totam voluptate voluptatum ut similique beatae, aspernatur non! Harum inventore quibusdam quia ipsum doloribus, amet, alias rerum provident ab labore repudiandae neque? A aliquid temporibus tempore veritatis magni eius nesciunt ut ratione repudiandae dolorum tempora iure mollitia, rem in, minima laborum ducimus soluta culpa iste explicabo! Impedit, reiciendis. Veniam totam sequi debitis in.
 
-    <script >
-function shuffle(arr) {
-    for (var i = arr.length - 1; i >= 0; i--) {
-        var j = Math.floor(Math.random() * (i + 1));
-        var temp = arr[i];
-        arr[i] = arr[j];
-        arr[j] = temp; 
-    }
-    return arr;
-}
-var array = [0,1,2,3,4,5,6,7,8,9];
-
-document.writeln(shuffle(array));
+    </div>
+    <div class="button">
+    <button>
+        check
+    </button>
+    </div>
+    <script src="js.js">
 
     </script>
 </body>
