--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Canvas</title>
+  <link rel="stylesheet" href="style.css">
 </head>
- 
+
 <body>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
-<canvas id="canvas" width="200" height= "200"></canvas>
-
-<script>
   
+    <!-- <div class="box">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo explicabo facere neque provident odio itaque placeat eius quidem. Beatae voluptatibus rem ipsum nemo maiores illo nihil soluta? A perspiciatis esse adipisci nemo recusandae, vitae possimus natus ratione quam aliquam quidem est molestias voluptates facere quasi quos fuga totam voluptate voluptatum ut similique beatae, aspernatur non! Harum inventore quibusdam quia ipsum doloribus, amet, alias rerum provident ab labore repudiandae neque? A aliquid temporibus tempore veritatis magni eius nesciunt ut ratione repudiandae dolorum tempora iure mollitia, rem in, minima laborum ducimus soluta culpa iste explicabo! Impedit, reiciendis. Veniam totam sequi debitis in.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, nesciunt quidem dignissimos officiis at molestias magnam officia facilis cum ipsum corrupti culpa quas iste, a debitis esse reiciendis ex deleniti recusandae hic suscipit laborum sunt? In, perferendis nulla repellat aut ut asperiores minus porro similique quos facilis. Consectetur blanditiis labore eos nobis dolorum incidunt non ducimus illo, officiis possimus id eius soluta sed molestiae dignissimos culpa, impedit perferendis repudiandae autem numquam. Magni modi quisquam recusandae obcaecati culpa minus saepe repellat laudantium, consectetur eum maiores, praesentium illum quo voluptas temporibus quos. Earum dolor, soluta dignissimos blanditiis ad deserunt maiores, expedita facilis quasi veniam illum? Cumque animi quia assumenda nostrum, dolor corrupti nisi tempore minus dolorem officia eius quibusdam ducimus quod harum fuga perferendis accusantium? Repellat quo, veniam iure reprehenderit quas nesciunt reiciendis nihil doloribus hic quis, fuga quisquam ratione laudantium suscipit ab recusandae exercitationem consequatur excepturi magni modi accusantium itaque explicabo! Veniam odit, natus in sint, quidem, quia perspiciatis voluptas alias dolore a nihil eum qui vero. Aspernatur quis illo, in maiores iste minus nostrum alias nulla! Itaque, explicabo! Quos, maiores quae omnis nihil accusamus a repudiandae non quis recusandae, quas nam fugit sapiente tempora dolorum. Perspiciatis odit ipsa pariatur velit.
+    </div>
+    <div class="button">
+    <button>
+        check
+    </button>
+    </div> -->
+    <script src="js.js">
 
-            
-</script>  
-   
-  
-  
-
-<!-- My Script -->
-
+    </script>
 </body>
-
 </html>
